# openclaw-voice

./: .gitignore  LICENSE  pyproject.toml  start.sh
.github/workflows/: test.yml
docs/: index.html  twitter-article.md
scripts/: download-model.sh
src/client/: index.html
src/server/: backend.py  main.py  text_utils.py  tts.py
