[project]
name = "openclaw-voice"
version = "0.1.0"
description = "Self-hosted browser-based voice interface for AI assistants"
readme = "README.md"
requires-python = ">=3.10,<3.14"
license = {text = "MIT"}
authors = [
    {name = "Purple Horizons", email = "hello@purplehorizons.io"}
]
keywords = ["voice", "ai", "assistant", "whisper", "tts", "stt"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "websockets>=12.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "numpy>=1.26.0",
    "openai>=1.6.0",
    "httpx>=0.26.0",
    "loguru>=0.7.2",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
stt = [
    "faster-whisper>=1.0.0",
]
tts = [
    "torch>=2.1.0",
    "torchaudio>=2.1.0",
]
all = [
    "openclaw-voice[stt,tts]",
]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "black>=23.12.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/Purple-Horizons/openclaw-voice"
Repository = "https://github.com/Purple-Horizons/openclaw-voice"
Issues = "https://github.com/Purple-Horizons/openclaw-voice/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]
